css and js links added to head tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>EduPalu .:. Bienvenue</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-light_blue.min.css" /> 
+	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body>
 	
