--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <!-- Image card -->
 <style>
 .demo-card-image.mdl-card {
-  width: 256px;
-  height: 256px;
-  background: url('https://source.unsplash.com/category/nature/1600x900') center / cover;
+  width: auto ;
+  height: 100%;
+  background: url('images/menu_moustique.jpg') center / cover;
 }
 .demo-card-image > .mdl-card__actions {
   height: 52px;
@@ -59,17 +59,89 @@
 	    </nav>
 	  </div>
 	  <main class="mdl-layout__content">
-	    <div class="page-content"><!-- Your content goes here --></div>
+	    <div class="page-content">
+	    	
+	<div class="mdl-grid">
+	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  <div class="mdl-card__title mdl-card--expand"></div>
+			  <div class="mdl-card__actions">
+			    <span class="demo-card-image__filename">Image.jpg</span>
+			  </div>
+			</div>	
+	  </div>
+	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  <div class="mdl-card__title mdl-card--expand"></div>
+			  <div class="mdl-card__actions">
+			    <span class="demo-card-image__filename">Image.jpg</span>
+			  </div>
+			</div>		  	
+	  </div>
+	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  <div class="mdl-card__title mdl-card--expand"></div>
+			  <div class="mdl-card__actions">
+			    <span class="demo-card-image__filename">Image.jpg</span>
+			  </div>
+			</div>		  	
+	  </div>
+	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  <div class="mdl-card__title mdl-card--expand"></div>
+			  <div class="mdl-card__actions">
+			    <span class="demo-card-image__filename">Image.jpg</span>
+			  </div>
+			</div>		  	
+	  </div>	
+	    	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  <div class="mdl-card__title mdl-card--expand"></div>
+			  <div class="mdl-card__actions">
+			    <span class="demo-card-image__filename">Image.jpg</span>
+			  </div>
+			</div>	
+	  </div>
+	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  <div class="mdl-card__title mdl-card--expand"></div>
+			  <div class="mdl-card__actions">
+			    <span class="demo-card-image__filename">Image.jpg</span>
+			  </div>
+			</div>		  	
+	  </div>
+	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  <div class="mdl-card__title mdl-card--expand"></div>
+			  <div class="mdl-card__actions">
+			    <span class="demo-card-image__filename">Image.jpg</span>
+			  </div>
+			</div>		  	
+	  </div>
+	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  <div class="mdl-card__title mdl-card--expand"></div>
+			  <div class="mdl-card__actions">
+			    <span class="demo-card-image__filename">Image.jpg</span>
+			  </div>
+			</div>		  	
+	  </div>
+	</div>
+
+	<footer class="mdl-mini-footer">
+  <div class="mdl-mini-footer__left-section">
+    <div class="mdl-logo">Title</div>
+    <ul class="mdl-mini-footer__link-list">
+      <li><a href="#">Help</a></li>
+      <li><a href="#">Privacy & Terms</a></li>
+    </ul>
+  </div>
+</footer>
+
+	    </div>
 	  </main>
 	</div>
 		
-	
 
-	<div class="demo-card-image mdl-card mdl-shadow--2dp">
-	  <div class="mdl-card__title mdl-card--expand"></div>
-	  <div class="mdl-card__actions">
-	    <span class="demo-card-image__filename">Image.jpg</span>
-	  </div>
-	</div>		
 </body>
 </html>
