footer added, card re-aranged, logo added on top

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 .demo-card-image.mdl-card {
   width: auto ;
   height: 100%;
-  background: url('images/menu_moustique.jpg') center / cover;
+  background: url('img/menu_moustique.jpg') center / cover;
 }
 .demo-card-image > .mdl-card__actions {
   height: 52px;
@@ -37,7 +37,7 @@
 	  <header class="mdl-layout__header">
 	    <div class="mdl-layout__header-row">
 	      <!-- Title -->
-	      <span class="mdl-layout-title">EduPalu</span>
+	      <span class="mdl-logo"><img src="img/logo.png" alt=""></span>
 	      <!-- Add spacer, to align navigation to the right -->
 	      <div class="mdl-layout-spacer"></div>
 	      <!-- Navigation. We hide it in small screens. -->
@@ -59,86 +59,100 @@
 	    </nav>
 	  </div>
 	  <main class="mdl-layout__content">
-	    <div class="page-content">
-	    	
-	<div class="mdl-grid">
-	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
-			  <div class="mdl-card__title mdl-card--expand"></div>
-			  <div class="mdl-card__actions">
-			    <span class="demo-card-image__filename">Image.jpg</span>
+	    <div class="page-content">	
+			<div class="mdl-grid">
+			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename">Image.jpg</span>
+					  </div>
+					</div>	
 			  </div>
-			</div>	
-	  </div>
-	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
-			  <div class="mdl-card__title mdl-card--expand"></div>
-			  <div class="mdl-card__actions">
-			    <span class="demo-card-image__filename">Image.jpg</span>
+			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename">Image.jpg</span>
+					  </div>
+					</div>		  	
 			  </div>
-			</div>		  	
-	  </div>
-	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
-			  <div class="mdl-card__title mdl-card--expand"></div>
-			  <div class="mdl-card__actions">
-			    <span class="demo-card-image__filename">Image.jpg</span>
+			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename">Image.jpg</span>
+					  </div>
+					</div>		  	
 			  </div>
-			</div>		  	
-	  </div>
-	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
-			  <div class="mdl-card__title mdl-card--expand"></div>
-			  <div class="mdl-card__actions">
-			    <span class="demo-card-image__filename">Image.jpg</span>
+			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename">Image.jpg</span>
+					  </div>
+					</div>		  	
+			  </div>	
+			    	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename">Image.jpg</span>
+					  </div>
+					</div>	
 			  </div>
-			</div>		  	
-	  </div>	
-	    	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
-			  <div class="mdl-card__title mdl-card--expand"></div>
-			  <div class="mdl-card__actions">
-			    <span class="demo-card-image__filename">Image.jpg</span>
+			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename">Image.jpg</span>
+					  </div>
+					</div>		  	
 			  </div>
-			</div>	
-	  </div>
-	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
-			  <div class="mdl-card__title mdl-card--expand"></div>
-			  <div class="mdl-card__actions">
-			    <span class="demo-card-image__filename">Image.jpg</span>
+			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename">Image.jpg</span>
+					  </div>
+					</div>		  	
 			  </div>
-			</div>		  	
-	  </div>
-	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
-			  <div class="mdl-card__title mdl-card--expand"></div>
-			  <div class="mdl-card__actions">
-			    <span class="demo-card-image__filename">Image.jpg</span>
+			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename">Image.jpg</span>
+					  </div>
+					</div>		  	
 			  </div>
-			</div>		  	
-	  </div>
-	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-	  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
-			  <div class="mdl-card__title mdl-card--expand"></div>
-			  <div class="mdl-card__actions">
-			    <span class="demo-card-image__filename">Image.jpg</span>
+			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename">Image.jpg</span>
+					  </div>
+					</div>		  	
 			  </div>
-			</div>		  	
-	  </div>
-	</div>
-
-	<footer class="mdl-mini-footer">
-  <div class="mdl-mini-footer__left-section">
-    <div class="mdl-logo">Title</div>
-    <ul class="mdl-mini-footer__link-list">
-      <li><a href="#">Help</a></li>
-      <li><a href="#">Privacy & Terms</a></li>
-    </ul>
-  </div>
-</footer>
+			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename">Image.jpg</span>
+					  </div>
+					</div>		  	
+			  </div>	  
+			</div>
 
 	    </div>
+		
+		<footer class="mdl-mini-footer">
+		  <div class="mdl-mini-footer__left-section">
+		    <div class="mdl-logo">Title</div>
+		    <ul class="mdl-mini-footer__link-list">
+		      <li><a href="#">Fongwama 2017</a></li>
+		    </ul>
+		  </div>
+		</footer>	    
 	  </main>
 	</div>
 		
