--- a/index.html
+++ b/index.html
@@ -8,27 +8,8 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-light_blue.min.css" /> 
+	<link rel="stylesheet" href="css/custom.css" /> 
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
-<!-- Image card -->
-<style>
-.demo-card-image.mdl-card {
-  width: auto ;
-  height: 100%;
-  background: url('img/menu_moustique.jpg') center / cover;
-}
-.demo-card-image > .mdl-card__actions {
-  height: 52px;
-  padding: 16px;
-  background: rgba(0, 0, 0, 0.2);
-}
-.demo-card-image__filename {
-  color: #fff;
-  font-size: 14px;
-  font-weight: 500;
-}
-</style>
-
 </head>
 <body>
 
@@ -65,7 +46,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Image.jpg</span>
+					    <span class="demo-card-image__filename">Comprendre</span>
 					  </div>
 					</div>	
 			  </div>
@@ -73,7 +54,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Image.jpg</span>
+					    <span class="demo-card-image__filename">Se protéger</span>
 					  </div>
 					</div>		  	
 			  </div>
@@ -81,7 +62,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Image.jpg</span>
+					    <span class="demo-card-image__filename">Diagnostiquer</span>
 					  </div>
 					</div>		  	
 			  </div>
@@ -89,7 +70,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Image.jpg</span>
+					    <span class="demo-card-image__filename">Se soigner</span>
 					  </div>
 					</div>		  	
 			  </div>	
@@ -97,7 +78,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Image.jpg</span>
+					    <span class="demo-card-image__filename">Pharmacies</span>
 					  </div>
 					</div>	
 			  </div>
@@ -105,7 +86,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Image.jpg</span>
+					    <span class="demo-card-image__filename">Questions / Réponses</span>
 					  </div>
 					</div>		  	
 			  </div>
@@ -113,7 +94,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Image.jpg</span>
+					    <span class="demo-card-image__filename">Jouer : Le quiz</span>
 					  </div>
 					</div>		  	
 			  </div>
@@ -121,7 +102,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Image.jpg</span>
+					    <span class="demo-card-image__filename">Jouer : Chasse aux parasites</span>
 					  </div>
 					</div>		  	
 			  </div>
@@ -129,7 +110,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Image.jpg</span>
+					    <span class="demo-card-image__filename">Comment ?</span>
 					  </div>
 					</div>		  	
 			  </div>
@@ -137,7 +118,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Image.jpg</span>
+					    <span class="demo-card-image__filename">Qui ?</span>
 					  </div>
 					</div>		  	
 			  </div>	  
@@ -149,7 +130,7 @@
 		  <div class="mdl-mini-footer__left-section">
 		    <div class="mdl-logo">Title</div>
 		    <ul class="mdl-mini-footer__link-list">
-		      <li><a href="#">Fongwama 2017</a></li>
+		      <li><a href="#">Fongwama - 2017</a></li>
 		    </ul>
 		  </div>
 		</footer>	    
