--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 	  <div class="mdl-layout__drawer">
 	    <span class="mdl-layout-title">Title</span>
 	    <nav class="mdl-navigation">
-	      <a class="mdl-navigation__link" href="">Link</a>
-	      <a class="mdl-navigation__link" href="">Link</a>
-	      <a class="mdl-navigation__link" href="">Link</a>
-	      <a class="mdl-navigation__link" href="">Link</a>
+	      <a class="mdl-navigation__link" href="">Trouver une pharmacie</a>
+	      <a class="mdl-navigation__link" href="">Trouver une CSI</a>
+	      <a class="mdl-navigation__link" href="">Comment ?</a>
+	      <a class="mdl-navigation__link" href="">A propos</a>
 	    </nav>
 	  </div>
 	  <main class="mdl-layout__content">
