navigatin menu text added

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	      <div class="mdl-layout-spacer"></div>
 	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
-	        <a class="mdl-navigation__link" href="">Link</a>
-	        <a class="mdl-navigation__link" href="">Link</a>
-	        <a class="mdl-navigation__link" href="">Link</a>
-	        <a class="mdl-navigation__link" href="">Link</a>
+	        <a class="mdl-navigation__link" href="">Trouver une pharmacie</a>
+	        <a class="mdl-navigation__link" href="">Trouver une CSI</a>
+	        <a class="mdl-navigation__link" href="">Comment ?</a>
+	        <a class="mdl-navigation__link" href="">A propos</a>
 	      </nav>
 	    </div>
 	  </header>
