--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
 	        <a class="mdl-navigation__link" href="">Trouver une pharmacie</a>
-	        <a class="mdl-navigation__link" href="">Trouver une CSI</a>
+	        <a class="mdl-navigation__link" href="">Trouver un CSI</a>
 	        <a class="mdl-navigation__link" href="">Comment ?</a>
 	        <a class="mdl-navigation__link" href="">A propos</a>
 	      </nav>
@@ -34,7 +34,7 @@
 	    <span class="mdl-layout-title">Title</span>
 	    <nav class="mdl-navigation">
 	      <a class="mdl-navigation__link" href="">Trouver une pharmacie</a>
-	      <a class="mdl-navigation__link" href="">Trouver une CSI</a>
+	      <a class="mdl-navigation__link" href="">Trouver un CSI</a>
 	      <a class="mdl-navigation__link" href="">Comment ?</a>
 	      <a class="mdl-navigation__link" href="">A propos</a>
 	    </nav>
