--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	    <div class="page-content">	
 			<div class="mdl-grid">
 			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp comprendre">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename">Comprendre</span>
@@ -51,7 +51,7 @@
 					</div>	
 			  </div>
 			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp se_proteger">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename">Se protéger</span>
@@ -59,7 +59,7 @@
 					</div>		  	
 			  </div>
 			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp diagnostiquer">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename">Diagnostiquer</span>
@@ -67,7 +67,7 @@
 					</div>		  	
 			  </div>
 			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp se_soigner">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename">Se soigner</span>
@@ -75,7 +75,7 @@
 					</div>		  	
 			  </div>	
 			    	  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp pharmacie">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename">Pharmacies</span>
@@ -83,7 +83,7 @@
 					</div>	
 			  </div>
 			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp questions">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename">Questions / Réponses</span>
@@ -91,7 +91,7 @@
 					</div>		  	
 			  </div>
 			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp quiz">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename">Jouer : Le quiz</span>
@@ -99,7 +99,7 @@
 					</div>		  	
 			  </div>
 			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp chasse">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename">Jouer : Chasse aux parasites</span>
@@ -107,7 +107,7 @@
 					</div>		  	
 			  </div>
 			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp comment">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename">Comment ?</span>
@@ -115,7 +115,7 @@
 					</div>		  	
 			  </div>
 			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
-			  		<div class="demo-card-image mdl-card mdl-shadow--2dp">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp qui">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
 					    <span class="demo-card-image__filename">Qui ?</span>
