--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 	  <div class="mdl-layout__drawer">
 	    <span class="mdl-layout-title">Title</span>
 	    <nav class="mdl-navigation">
-	      <a class="mdl-navigation__link" href="">Trouver une pharmacie</a>
-	      <a class="mdl-navigation__link" href="">Trouver un CSI</a>
-	      <a class="mdl-navigation__link" href="">Comment ?</a>
-	      <a class="mdl-navigation__link" href="">A propos</a>
+	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_pharmacy</i> Trouver une pharmacie</a>
+	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_hospital</i> Trouver un CSI</a>
+	      <a class="mdl-navigation__link" href=""><i class="material-icons">help_outline</i> Comment ?</a>
+	      <a class="mdl-navigation__link" href=""><i class="material-icons">info</i> A propos</a>
 	    </nav>
 	  </div>
 	  <main class="mdl-layout__content">
