drawer title modified and link added

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
 	        <a class="mdl-navigation__link" href="">Trouver une pharmacie</a>
 	        <a class="mdl-navigation__link" href="">Trouver un CSI</a>
+	        <a class="mdl-navigation__link" href="">Ajouter un centre de santé</a>
 	        <a class="mdl-navigation__link" href="">Comment ?</a>
 	        <a class="mdl-navigation__link" href="">A propos</a>
 	      </nav>
 	    </div>
 	  </header>
 	  <div class="mdl-layout__drawer">
-	    <span class="mdl-layout-title">Title</span>
+	    <span class="mdl-layout-title">EduPalu</span>
 	    <nav class="mdl-navigation">
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_pharmacy</i> Trouver une pharmacie</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_hospital</i> Trouver un CSI</a>
+	      <a class="mdl-navigation__link" href=""><i class="material-icons">add_circle</i> Ajouter un centre de santé</a>	      
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">help_outline</i> Comment ?</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">info</i> A propos</a>
 	    </nav>
