--- a/comprendre.html
+++ b/comprendre.html
@@ -50,7 +50,7 @@
 	    <div class="page-content">	
 			
 			<div class="mdl-grid mdl-container">
-				<h4>C'est quoi le paludisme ?</h4>
+				<h4 class="container_title">C'est quoi le paludisme ?</h4>
 					<img src="img/labo.jpg" alt="Laboratoire de campagne" class="full_img" />
 					<div class="text_container">
 						<div class="mdl-container_text">	
