bg card class added

--- a/se_proteger.html
+++ b/se_proteger.html
@@ -66,7 +66,7 @@
 						    <p>En Afrique, les espèces les plus importantes se reproduisent à partir de larves qui se développent dans de l'eau stagnante. Les adultes se reposent dans nos maisons et piquent aussi à l'intérieur des maisons.</p>
 
 									<div class="demo-card-square mdl-card mdl-shadow--2dp">
-									  <div class="mdl-card__title mdl-card--expand parasite">
+									  <div class="mdl-card__title mdl-card--expand larves_moustiques">
 									    <h2 class="mdl-card__title-text"></h2>
 									  </div>
 									  <div class="mdl-card__supporting-text">
@@ -89,7 +89,7 @@
             <p>Aujourd'hui, des produits comme les pyréthroïdes, la perméthrine, la deltaméthrine, la lamdacyhalothrin... sont souvent utilisés. Ils sont faiblement toxiques pour les humains mais très toxiques pour les moustiques et ils ne sentent pas mauvais.</p>	
 
             						<div class="demo-card-square mdl-card mdl-shadow--2dp">
-									  <div class="mdl-card__title mdl-card--expand parasite">
+									  <div class="mdl-card__title mdl-card--expand pulverisation">
 									    <h2 class="mdl-card__title-text"></h2>
 									  </div>
 									  <div class="mdl-card__supporting-text">
@@ -104,7 +104,7 @@
             <p>Les moustiquaires imprégnées d’insecticide sont un grand progrès. Les moustiquaires empêchent  que les personnes puissent être piquées lorsqu'elles dorment.</p>
 
             						<div class="demo-card-square mdl-card mdl-shadow--2dp">
-									  <div class="mdl-card__title mdl-card--expand parasite">
+									  <div class="mdl-card__title mdl-card--expand moustiquaire">
 									    <h2 class="mdl-card__title-text"></h2>
 									  </div>
 									  <div class="mdl-card__supporting-text">
