--- a/diagnostiquer.html
+++ b/diagnostiquer.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Diagnostiquer .:. EduPalu</title>
+	<title>Diagnostiquer le paludisme .:. EduPalu</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-light_blue.min.css" /> 
@@ -13,7 +13,6 @@
 
 	<style>
 
-}
 </style>
 </head>
 <body>
@@ -91,7 +90,7 @@
 	    </div>
     
 	  </main>
-	  		
+
 		<footer class="mdl-mini-footer">
 		  <div class="mdl-mini-footer__left-section">
 		    <ul class="mdl-mini-footer__link-list">
