--- a/questions_reponses.html
+++ b/questions_reponses.html
@@ -50,7 +50,7 @@
 			
 			<div class="mdl-grid mdl-container">
 				<h4 class="container_title">Questions / réponses</h4>
-					<img src="img/technicien_microscope.jpg" alt="Laboratoire de campagne" class="full_img" />
+					<img src="img/costaud.jpg" alt="Laboratoire de campagne" class="full_img" />
 					<div class="text_container">
 						<div class="mdl-container_text">	
 						    <p>Voici une série de questions et de réponses autour du paludisme.</p>
@@ -75,18 +75,6 @@
             
             <p><b>Quels sont les symptômes possibles du paludisme ?</b><br>
             Les symptômes du paludisme sont : la fièvre, les frissons, les douleurs articulaires et musculaires, les maux de tête et la fatigue. Mais attention, seul un médecin peut correctement diagnostiquer le paludisme, après avoir pris connaissance des résultats de l'examen de la goutte épaisse ou du test de diagnostic rapide.</p>
-            
-									<div class="demo-card-square mdl-card mdl-shadow--2dp">
-									  <div class="mdl-card__title mdl-card--expand costaud">
-									    <h2 class="mdl-card__title-text"></h2>
-									  </div>
-									  <div class="mdl-card__supporting-text">
-									    Bravo, après tant d'efforts, pourquoi ne pas tester vos connaissances sur le paludisme ?
-									  </div>
-  										  <!-- 
-                Crédit image : TDR, Pierre Poulain, CC-BY
-                -->
-									</div>	
 
 						</div>
 					</div>
