footer placed into main content

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	    </nav>
 	  </div>
 	  <main class="mdl-layout__content">
-	    <div class="page-content">	
+	    <div class="page-content mdl-container">	
 			<div class="mdl-grid container">
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp comprendre">
@@ -126,17 +126,17 @@
 					</div>		  	
 			  </div>	  
 			</div>
-
-	    </div>
-		    
-	  </main>
 	  	<footer class="mdl-mini-footer">
 		  <div class="mdl-mini-footer__left-section">
 		    <ul class="mdl-mini-footer__link-list">
 		      <li><a href="#">Fongwama - 2017</a></li>
 		    </ul>
 		  </div>
-		</footer>	
+		</footer>
+	    </div>
+		    
+	  </main>
+	
 	</div>
 		
 
