menu link added

--- a/qui.html
+++ b/qui.html
@@ -31,7 +31,7 @@
 	        <a class="mdl-navigation__link" href="">Trouver un CSI</a>
 	        <a class="mdl-navigation__link" href="">Ajouter un centre de santé</a>
 	        <a class="mdl-navigation__link" href="">Comment ?</a>
-	        <a class="mdl-navigation__link" href="">A propos</a>
+	        <a class="mdl-navigation__link" href="qui.html">A propos</a>
 	      </nav>
 	    </div>
 	  </header>
@@ -42,7 +42,7 @@
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_hospital</i> Trouver un CSI</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">add_circle</i> Ajouter un centre de santé</a>	      
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">help_outline</i> Comment ?</a>
-	      <a class="mdl-navigation__link" href=""><i class="material-icons">info</i> A propos</a>
+	      <a class="mdl-navigation__link" href="qui.html"><i class="material-icons">info</i> A propos</a>
 	    </nav>
 	  </div>
 	  <main class="mdl-layout__content">
