--- a/comment.html
+++ b/comment.html
@@ -30,7 +30,7 @@
 	        <a class="mdl-navigation__link" href="">Trouver une pharmacie</a>
 	        <a class="mdl-navigation__link" href="">Trouver un CSI</a>
 	        <a class="mdl-navigation__link" href="">Ajouter un centre de santé</a>
-	        <a class="mdl-navigation__link" href="">Comment ?</a>
+	        <a class="mdl-navigation__link" href="comment.html">Comment ?</a>
 	        <a class="mdl-navigation__link" href="">A propos</a>
 	      </nav>
 	    </div>
@@ -41,7 +41,7 @@
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_pharmacy</i> Trouver une pharmacie</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_hospital</i> Trouver un CSI</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">add_circle</i> Ajouter un centre de santé</a>	      
-	      <a class="mdl-navigation__link" href=""><i class="material-icons">help_outline</i> Comment ?</a>
+	      <a class="mdl-navigation__link" href="#"><i class="material-icons">help_outline</i> Comment ?</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">info</i> A propos</a>
 	    </nav>
 	  </div>
