--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp comprendre">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Comprendre</span>
+					    <span class="demo-card-image__filename"><a href="comprendre.html">Comprendre</a></span>
 					  </div>
 					</div>	
 			  </div>
@@ -57,7 +57,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp se_proteger">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Se protéger</span>
+					    <span class="demo-card-image__filename"><a href="se_proteger.html">Se protéger</a></span>
 					  </div>
 					</div>		  	
 			  </div>
@@ -65,7 +65,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp diagnostiquer">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Diagnostiquer</span>
+					    <span class="demo-card-image__filename"><a href="diagnostiquer.html">Diagnostiquer</a></span>
 					  </div>
 					</div>		  	
 			  </div>
@@ -73,7 +73,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp se_soigner">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Se soigner</span>
+					    <span class="demo-card-image__filename"><a href="se_soigner.html">Se soigner</a></span>
 					  </div>
 					</div>		  	
 			  </div>	
@@ -89,7 +89,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp questions">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Questions / Réponses</span>
+					    <span class="demo-card-image__filename"><a href="question_reponses.html">Questions / Réponses</a></span>
 					  </div>
 					</div>		  	
 			  </div>
@@ -97,7 +97,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp quiz">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Jouer : Le quiz</span>
+					    <span class="demo-card-image__filename"><a href="quiz_start.html">Jouer : Le quiz</a></span>
 					  </div>
 					</div>		  	
 			  </div>
@@ -113,7 +113,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp comment">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Comment ?</span>
+					    <span class="demo-card-image__filename"><a href="comment.html">Comment ?</a></span>
 					  </div>
 					</div>		  	
 			  </div>
@@ -121,7 +121,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp qui">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Qui ?</span>
+					    <span class="demo-card-image__filename"><a href="qui.html">Qui ?</a></span>
 					  </div>
 					</div>		  	
 			  </div>	  
