--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	    </div>
 	  </header>
 	  <div class="mdl-layout__drawer">
-	    <span class="mdl-layout-title">EduPalu</span>
+	    <span class="mdl-layout-title"><img src="img/logo.png" alt=""></span>
 	    <nav class="mdl-navigation">
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_pharmacy</i> Trouver une pharmacie</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_hospital</i> Trouver un CSI</a>
