drawer menu items updated

--- a/comprendre.html
+++ b/comprendre.html
@@ -22,7 +22,7 @@
 	  <header class="mdl-layout__header">
 	    <div class="mdl-layout__header-row">
 	      <!-- Title -->
-	      <span class="mdl-logo"><img src="img/logo.png" alt=""></span>
+	      <span class="mdl-logo"><a href="index.html"><img src="img/logo.png" alt=""></a></span>
 	      <!-- Add spacer, to align navigation to the right -->
 	      <div class="mdl-layout-spacer"></div>
 	      <!-- Navigation. We hide it in small screens. -->
@@ -36,10 +36,21 @@
 	    </div>
 	  </header>
 	  <div class="mdl-layout__drawer">
-	    <span class="mdl-layout-title">EduPalu</span>
+	    <span class="mdl-layout-title"><img src="img/logo.png" alt=""></span>
 	    <nav class="mdl-navigation">
+	      <a class="mdl-navigation__link" href="">Comprendre</a>
+	      <a class="mdl-navigation__link" href="">Se protéger</a>
+	      <a class="mdl-navigation__link" href="">Diagnostiquer</a>	      
+	      <a class="mdl-navigation__link" href="">Comment ?</a>
+	      <a class="mdl-navigation__link" href="">Pharmacies</a>
+
+	      <a class="mdl-navigation__link" href="">Questions / Réponses</a>
+	      <a class="mdl-navigation__link" href="">Jouer : Le quiz</a>
+	      <a class="mdl-navigation__link" href="">Jouer : Chasse aux parasites</a>	      
+			
+			<hr>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_pharmacy</i> Trouver une pharmacie</a>
-	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_hospital</i> Trouver un CSI</a>
+	      <a class="mdl-navigation__link" href=""><i class="material-icons">search</i> Trouver un CSI</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">add_circle</i> Ajouter un centre de santé</a>	      
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">help_outline</i> Comment ?</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">info</i> A propos</a>
