link added to logo, margin-left set to logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	  <header class="mdl-layout__header">
 	    <div class="mdl-layout__header-row">
 	      <!-- Title -->
-	      <span class="mdl-logo"><img src="img/logo.png" alt=""></span>
+	      <span class="mdl-logo"><a href="index.html"><img src="img/logo.png" alt=""></a></span>
 	      <!-- Add spacer, to align navigation to the right -->
 	      <div class="mdl-layout-spacer"></div>
 	      <!-- Navigation. We hide it in small screens. -->
