files and folders added, bug fixed

--- a/comment.html
+++ b/comment.html
@@ -68,7 +68,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp moustique">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Skeeze,  <br />Pixabay, <br />Creative Commons 0.</span>
+					    <span class="demo-card-image__filename">Skeeze, Pixabay, <br />Creative Commons 0.</span>
 					  </div>
 					</div>	
 			  </div>
@@ -160,6 +160,13 @@
 
 						</div>
 					</div>
+		<footer class="mdl-mini-footer">
+		  <div class="mdl-mini-footer__left-section">
+		    <ul class="mdl-mini-footer__link-list">
+		      <li><a href="#">Fongwama - 2017</a></li>
+		    </ul>
+		  </div>
+		</footer>					
 			</div>
 
 	    </div>
