footer bug fixed

--- a/comment.html
+++ b/comment.html
@@ -76,7 +76,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp moustiquaire">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">DFID,  <br />Flickr, <br />Creative Commons BY.</span>
+					    <span class="demo-card-image__filename">DFID, Flickr, <br />Creative Commons BY.</span>
 					  </div>
 					</div>	
 			  </div>
@@ -84,7 +84,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp tdr">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">US Army Africa,  <br />Flickr, <br />Creative Commons BY.</span>
+					    <span class="demo-card-image__filename">US Army Africa, Flickr, <br />Creative Commons BY.</span>
 					  </div>
 					</div>	
 			  </div>
@@ -92,7 +92,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp drug">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">PublicDomainPictures,  <br />Pixabay, <br />Creative Commons 0</span>
+					    <span class="demo-card-image__filename">PublicDomainPictures, Pixabay, <br />Creative Commons 0</span>
 					  </div>
 					</div>	
 			  </div>
@@ -100,7 +100,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp docteur">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">AMISOM Public Information,  <br />Flickr, <br />Domaine public.</span>
+					    <span class="demo-card-image__filename">AMISOM Public Information, Flickr, <br />Domaine public.</span>
 					  </div>
 					</div>	
 			  </div>
@@ -108,7 +108,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp questions">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">DFID,  <br />Flickr, <br />Creative Commons BY.</span>
+					    <span class="demo-card-image__filename">DFID, Flickr, <br />Creative Commons BY.</span>
 					  </div>
 					</div>	
 			  </div>
@@ -116,7 +116,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp quiz">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Julien Harneis,  <br />Flickr, <br />Creative Commons BY-SA.</span>
+					    <span class="demo-card-image__filename">Julien Harneis, Flickr, <br />Creative Commons BY-SA.</span>
 					  </div>
 					</div>	
 			  </div>
@@ -124,7 +124,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp technicien">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">US Army Africa,  <br />Flickr, <br />Creative Commons BY.</span>
+					    <span class="demo-card-image__filename">US Army Africa, Flickr, <br />Creative Commons BY.</span>
 					  </div>
 					</div>	
 			  </div>
@@ -132,7 +132,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp clavier">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">DeclanTM,  <br />Flickr, <br />Creative Commons BY.</span>
+					    <span class="demo-card-image__filename">DeclanTM, Flickr, <br />Creative Commons BY.</span>
 					  </div>
 					</div>	
 			  </div>
@@ -140,7 +140,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp sourire">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Jack Stimpson,  <br />Flickr, <br />Creative Commons BY.</span>
+					    <span class="demo-card-image__filename">Jack Stimpson, Flickr, <br />Creative Commons BY.</span>
 					  </div>
 					</div>	
 			  </div>			  			  			  			  			  			  
@@ -172,14 +172,7 @@
 	    </div>
     
 	  </main>
-
-		<footer class="mdl-mini-footer">
-		  <div class="mdl-mini-footer__left-section">
-		    <ul class="mdl-mini-footer__link-list">
-		      <li><a href="#">Fongwama - 2017</a></li>
-		    </ul>
-		  </div>
-		</footer>	
+	
 	</div>
 		
 
