--- a/quiz_play.html
+++ b/quiz_play.html
@@ -58,7 +58,7 @@
 	  </div>
 	  <main class="mdl-layout__content">
 	    <div class="page-content mdl-container">	
-		<div>
+		<div class="mdl-container_text">
 			<div id="question_header">
             <div id="question_nb">
                 Question <span id="question_nb_value"></span>
@@ -84,15 +84,15 @@
         </div>
 		</div>
 
-	  	<footer class="mdl-mini-footer">
+
+	    </div>
+		    	  	<footer class="mdl-mini-footer">
 		  <div class="mdl-mini-footer__left-section">
 		    <ul class="mdl-mini-footer__link-list">
 		      <li><a href="#">Fongwama - 2017</a></li>
 		    </ul>
 		  </div>
 		</footer>
-	    </div>
-		    
 	  </main>
 	
 	</div>
