--- a/comment.html
+++ b/comment.html
@@ -38,11 +38,21 @@
 	  <div class="mdl-layout__drawer">
 	    <span class="mdl-layout-title">EduPalu</span>
 	    <nav class="mdl-navigation">
+	      <a class="mdl-navigation__link" href="comprendre.html">Comprendre</a>
+	      <a class="mdl-navigation__link" href="se_proteger.html">Se protéger</a>
+	      <a class="mdl-navigation__link" href="diagnostiquer.html">Diagnostiquer</a>	      
+	      <a class="mdl-navigation__link" href="">Pharmacies</a>
+
+	      <a class="mdl-navigation__link" href="question_reponses.html">Questions / Réponses</a>
+	      <a class="mdl-navigation__link" href="quiz_play.html">Jouer : Le quiz</a>
+	      <a class="mdl-navigation__link" href="">Jouer : Chasse aux parasites</a>	      
+			
+			<hr>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_pharmacy</i> Trouver une pharmacie</a>
-	      <a class="mdl-navigation__link" href=""><i class="material-icons">local_hospital</i> Trouver un CSI</a>
+	      <a class="mdl-navigation__link" href=""><i class="material-icons">search</i> Trouver un CSI</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">add_circle</i> Ajouter un centre de santé</a>	      
-	      <a class="mdl-navigation__link" href="#"><i class="material-icons">help_outline</i> Comment ?</a>
-	      <a class="mdl-navigation__link" href=""><i class="material-icons">info</i> A propos</a>
+	      <a class="mdl-navigation__link" href="comment.html"><i class="material-icons">help_outline</i> Comment ?</a>
+	      <a class="mdl-navigation__link" href="qui.html"><i class="material-icons">info</i> A propos</a>
 	    </nav>
 	  </div>
 	  <main class="mdl-layout__content">
@@ -159,20 +169,17 @@
 
 
 						</div>
-					</div>
-		<footer class="mdl-mini-footer">
-		  <div class="mdl-mini-footer__left-section">
-		    <ul class="mdl-mini-footer__link-list">
-		      <li><a href="#">Fongwama - 2017</a></li>
-		    </ul>
-		  </div>
-		</footer>					
+					</div>					
 			</div>
 
 	    </div>
     
 	  </main>
-	
+		  <footer class="mdl-mini-footer">
+  <div class="mdl-mini-footer__left-section">
+    <div class="mdl-logo">Fongwama 2017/div>
+  </div>
+</footer>
 	</div>
 		
 
