search bar created

--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
 	      <a class="mdl-navigation__link" href="comment.html"><i class="material-icons">help_outline</i> Comment ?</a>
 	      <a class="mdl-navigation__link" href="qui.html"><i class="material-icons">info</i> A propos</a>
 	    </nav>
-	  </div>
+	  </div>  
+	    <div class="page-content">	
+			<div class="mdl-grid bg_search">
+			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
+				<div class="search">
+				    <i class="material-icons">search</i>
+				    <input type="text" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
+				</div>
+			  </div>
+			</div>	
+	    </div>		  
 	  <main class="mdl-layout__content">
 	    <div class="page-content mdl-container">	
 			<div class="mdl-grid container">
