--- a/comprendre.html
+++ b/comprendre.html
@@ -10,10 +10,6 @@
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-light_blue.min.css" /> 
 	<link rel="stylesheet" href="css/custom.css" /> 
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
-	<style>
-
-</style>
 </head>
 <body>
 
@@ -55,6 +51,16 @@
 	      <a class="mdl-navigation__link" href="qui.html"><i class="material-icons">info</i> A propos</a>
 	    </nav>
 	  </div>
+	    <div class="page-content">	
+			<div class="mdl-grid bg_search">
+			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
+				<div class="search">
+				    <i class="material-icons">search</i>
+				    <input type="text" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
+				</div>
+			  </div>
+			</div>	
+	    </div>		  
 	  <main class="mdl-layout__content">
 	    <div class="page-content">	
 			
