icon added to menu and show only on small screen class added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
 	      <!-- Add spacer, to align navigation to the right -->
 	      <div class="mdl-layout-spacer"></div>
 	      <!-- Navigation. We hide it in small screens. -->
+<div class="mdl-layout--small-screen-only">
+			      <label class="mdl-button mdl-js-button mdl-button--icon" for="waterfall-exp">
+          	  	<i class="material-icons">location_on</i>
+        	  </label>
+		      <label class="mdl-button mdl-js-button mdl-button--icon" for="waterfall-exp">
+          	  	<i class="material-icons">search</i>
+        	  </label>
+				<!-- Right aligned menu below button -->
+				<button id="demo-menu-lower-right"
+				        class="mdl-button mdl-js-button mdl-button--icon">
+				  <i class="material-icons">more_vert</i>
+				</button>
+</div>	      
+	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
 	        <a class="mdl-navigation__link" href="">Trouver une pharmacie</a>
 	        <a class="mdl-navigation__link" href="">Trouver un CSI</a>
