footer show only to large screens

--- a/diagnostiquer.html
+++ b/diagnostiquer.html
@@ -104,7 +104,7 @@
 			</div>
 	
 	    </div>
-    	  <footer class="mdl-mini-footer">
+    	  <footer class="mdl-mini-footer mdl-layout--large-screen-only">
   <div class="mdl-mini-footer__left-section">
     <div class="mdl-logo">Fongwama 2017 </div>
   </div>
