--- a/comment.html
+++ b/comment.html
@@ -181,7 +181,7 @@
 	    </div>
     
 	  </main>
-		  <footer class="mdl-mini-footer">
+		  <footer class="mdl-mini-footer mdl-layout--large-screen-only">
   <div class="mdl-mini-footer__left-section">
     <div class="mdl-logo">Fongwama 2017/div>
   </div>
