--- a/se_soigner.html
+++ b/se_soigner.html
@@ -131,7 +131,7 @@
     
 	  </main>
 
-		<footer class="mdl-mini-footer">
+		<footer class="mdl-mini-footer mdl-layout--large-screen-only">
 		  <div class="mdl-mini-footer__left-section">
 		    <ul class="mdl-mini-footer__link-list">
 		      <li><a href="#">Fongwama - 2017</a></li>
