menu items added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	  <header class="mdl-layout__header">
 	    <div class="mdl-layout__header-row">
 	      <!-- Title -->
-	      <span class="mdl-logo"><a href="index.html"><img src="img/logo.png" alt=""></a></span>
+	      <span class="mdl-logo"><a href="index.html"><img src="img/logo.png" alt=""></a>
+	      </span>
 	      <!-- Add spacer, to align navigation to the right -->
 	      <div class="mdl-layout-spacer"></div>
 	      <!-- Navigation. We hide it in small screens. -->
@@ -35,6 +36,12 @@
 				        class="mdl-button mdl-js-button mdl-button--icon">
 				  <i class="material-icons">more_vert</i>
 				</button>
+				<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
+				    for="demo-menu-lower-right">
+				  <li class="mdl-menu__item">Mise-à-jour</li>
+				  <li class="mdl-menu__item">Comment</li>
+				  <li class="mdl-menu__item">A propos</li>
+				</ul>				
 </div>	      
 	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
@@ -52,9 +59,8 @@
 	      <a class="mdl-navigation__link" href="diagnostiquer.html"><i class="material-icons">find_in_page</i>Diagnostiquer</a>	      
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">healing</i>Se soigner</a>
 	      <a class="mdl-navigation__link" href="question_reponses.html"><i class="material-icons">forum</i>Questions / Réponses</a>
-	      <a class="mdl-navigation__link" href="quiz_play.html"><i class="material-icons">games</i>Jouer : Le quiz</a>
-	      <a class="mdl-navigation__link" href="">Jouer : Chasse aux parasites</a>	      			
-			<hr>     
+	      <a class="mdl-navigation__link" href="quiz_play.html"><i class="material-icons">games</i>Le quiz</a>
+	      <a class="mdl-navigation__link" href=""><i class="material-icons">extension</i>Chasse aux parasites</a>	      			     
 	      <a class="mdl-navigation__link" href="comment.html"><i class="material-icons">copyright</i>Comment ?</a>
 	      <a class="mdl-navigation__link" href="qui.html"><i class="material-icons">info</i> A propos</a>
 	    </nav>
