--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
 				</button>
 				<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
 				    for="demo-menu-lower-right">
-				  <li class="mdl-menu__item">Mise-à-jour</li>
-				  <li class="mdl-menu__item">Comment</li>
-				  <li class="mdl-menu__item">A propos</li>
+				  <li class="mdl-menu__item"><a href="comment.html">Comment</a></li>
+				  <li class="mdl-menu__item"><a href="qui.html">A propos</a></li>
 				</ul>				
 			</div>	      
 	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
-	        <a class="mdl-navigation__link" href="">Trouver une pharmacie</a>
+	        <a class="mdl-navigation__link link_color" href="">Trouver une pharmacie</a>
 	        <a class="mdl-navigation__link" href="">Trouver un CSI</a>
 	        <a class="mdl-navigation__link" href="">Ajouter un centre de santé</a>
 	      </nav>
