--- a/se_proteger.html
+++ b/se_proteger.html
@@ -36,9 +36,8 @@
 				</button>
 				<ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect"
 				    for="demo-menu-lower-right">
-				  <li class="mdl-menu__item">Mise-à-jour</li>
-				  <li class="mdl-menu__item">Comment</li>
-				  <li class="mdl-menu__item">A propos</li>
+				  <li class="mdl-menu__item"><a href="comment.html">Comment</a></li>
+				  <li class="mdl-menu__item"><a href="qui.html">A propos</a></li>
 				</ul>				
 			</div>	
 	      <!-- Navigation. We hide it in small screens. -->
