--- a/index.html
+++ b/index.html
@@ -156,19 +156,21 @@
 					    <span class="demo-card-image__filename"><a href="qui.html">Qui ?</a></span>
 					  </div>
 					</div>		  	
-			  </div>	  
-			</div>
-
-	    </div>
-		    
-	  </main>
-		  	<footer class="mdl-mini-footer mdl-layout--large-screen-only">
+			  </div>	
+			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet mdl-cell--hide-phone mdl-cell--hide-tablet">
+	  			<footer class="mdl-mini-footer mdl-layout--large-screen-only">
 		  <div class="mdl-mini-footer__left-section">
 		    <ul class="mdl-mini-footer__link-list">
 		      <li><a href="#">Fongwama - 2017</a></li>
 		    </ul>
 		  </div>
-		</footer>
+		</footer>	
+			  </div>			    
+			</div>
+
+	    </div>
+		    
+	  </main>
 
 	</div>
 		
