--- a/index.html
+++ b/index.html
@@ -156,8 +156,15 @@
 					    <span class="demo-card-image__filename"><a href="qui.html">Qui ?</a></span>
 					  </div>
 					</div>		  	
-			  </div>	
-			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet mdl-cell--hide-phone mdl-cell--hide-tablet">
+			  </div>				    
+			</div>
+
+	    </div>
+
+
+
+	    <div class="page-content mdl-container">	
+			<div class="mdl-grid container">	
 	  			<footer class="mdl-mini-footer mdl-layout--large-screen-only">
 				  <div class="mdl-mini-footer__left-section">
 				    <ul class="mdl-mini-footer__link-list">
@@ -165,10 +172,11 @@
 				    </ul>
 				  </div>
 				</footer>	
-			  </div>			    
 			</div>
-
 	    </div>
+
+
+
 		    
 	  </main>
 
